--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version:  '5.4.x'
+        dotnet-version:  '5.4.1622'
 
     steps:
       - uses: actions/checkout@v3
