--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -1,30 +1,19 @@
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request 
-# events but only for the master branch
+name: .NET
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+    branches: [ "main" ]
 jobs:
-  # This workflow contains a single job called "Build"
-  Build:
-    runs-on: [windows-latest]
-
+  build:
+    runs-on: ubuntu-latest
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-      
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1
-
-    - name: Setup NuGet
-      uses: NuGet/setup-nuget@v1.0.5
-
-    - name: Restore NuGet packages
-      run: nuget restore BugGuardian.LibraryOnly.sln
-
-    - name: Build the Solution
-      run: msbuild BugGuardian.LibraryOnly.sln /p:Configuration=Release
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 6.0.x
+    - name: Restore dependencies
+      run: dotnet restore HelloTests
+    - name: Build
+      run: dotnet build HelloTests --no-restore
+    - name: Test
+      run: dotnet test HelloTests --no-build --verbosity normal
