--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -12,8 +12,8 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore HelloTests
+      run: dotnet restore PZLab2
     - name: Build
-      run: dotnet build HelloTests --no-restore
+      run: dotnet build PZLab2 --no-restore
     - name: Test
-      run: dotnet test HelloTests --no-build --verbosity normal
+      run: dotnet test PZLab2 --no-build --verbosity normal
